Cambiando API exclusivas de Java 11